add client-demo visualisation to display winning sequences
